--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile=liquibase/db.changelog-master.xml
 url=jdbc:mysql://localhost:3306/distance-calculator
 username= root
-password= testtest
+password= root
 driver=com.mysql.cj.jdbc.Driver
